Add login fix bugs
